重新修改实验室结构动作

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -27,11 +27,11 @@
         <div class="lab_content_r">
             <nav class="labSubNav">
                 <ul>
-                    <li class="labHome active">中心介绍</li>
+                    <li class="labHome">中心介绍</li>
                     <li class="status">运营状态</li>
                     <li class="analysis">数据分析</li>
-                    <li class="centerCurves">实时监测</li>
-                    <li class="abroadCurves" style="display: none">实时监测.</li>
+                    <!--<li class="centerCurves">实时监测</li>-->
+                    <li class="curves active">实时监测.</li>
                     <li class="moduleMakers" style="display: none">实时数据</li>
                 </ul>
             </nav>
@@ -242,6 +242,7 @@
                     </div>
                 </div>
                 <!--中海博瑞视频监控和曲线-->
+<!--
                 <div class="item monitoring webSocket">
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
@@ -287,7 +288,7 @@
                                     <div class="videoWait">视频接入中</div>
                                 </div>
                             </div>
-                            <!--链接型实验室-->
+                            &lt;!&ndash;链接型实验室&ndash;&gt;
                             <div class="item iframe" style="display: none">
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
@@ -300,11 +301,12 @@
 
                     </div>
                 </div>
-                <!--国外视频监控和曲线-->
+-->
+                <!--合并后的视频监控和曲线-->
                 <div class="item monitoring world">
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
-                            <div class="sheshi_tab">视频监控</div>
+                            <div class="sheshi_tab ">视频监控</div>
                             <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
                             <div class="sheshi_tab_list">
                                 <ul id="lab_unit_selected_center_world">
@@ -315,11 +317,11 @@
                         <div class="shishi_right shishi_right_show">
                             <div class="item video" hidden>
                                 <div class="bigVideoBox">
-                                    <div id="bigVideoWorld"></div>
+                                    <div id="bigVideo"></div>
                                     <div class="videoWait">视频接入中</div>
                                 </div>
                             </div>
-                            <div class="item">
+                            <div class="item curve">
                                 <div class='sheshi_right_top'>
                                     <ul>
                                         <li>Report No.：<span id="center_sybh_id_world"></span></li>
@@ -342,16 +344,26 @@
                                 </div>
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
-                                    <div id="smallVideoWorld"></div>
+                                    <div id="smallVideo"></div>
                                     <div class="videoWait">视频接入中</div>
                                 </div>
                                 
                             </div>
+                            <!--链接型实验室-->
+                            <div class="item iframe" style="display: none">
+                                <div class="smallVideoBox">
+                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
+                                    <div id="smallVideoWeb"></div>
+                                    <div class="videoWait">视频接入中</div>
+                                </div>
+                                <iframe id="lab_iframe_video" src=""></iframe>
+                            </div>
                         </div>
+
                     </div>
                 </div>
                 <!--嵌入模块商互联界面-->
-                <div class="item ">
+                <div class="item moduleMakers">
                     <iframe src="" frameborder="0"></iframe>
                 </div>
             </div>
