--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -164,7 +164,37 @@ li:not(.hasChildren).active {
         position: absolute;
         right: 4em;
     }
-
+    .labMainNav > .switchBox > ul > li > ul > li>span.icon { /*小图标*/
+        display: inline-block;
+        position: relative;
+        top: 0.16em;
+        margin-right: 1em;
+        width: 1em;
+        height: 1em;
+        background-image: url(../img/ico/line_qt.png);
+        background-size: contain;
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(1)>span.icon{
+        background-image: url(../img/ico/line_bl.png);
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(2)>span.icon{
+        background-image: url(../img/ico/line_xd.png);
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(3)>span.icon{
+        background-image: url(../img/ico/line_jk.png);
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(4)>span.icon{
+        background-image: url(../img/ico/line_sk.png);
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(5)>span.icon{
+        background-image: url(../img/ico/line_cd.png);
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(6)>span.icon{
+        background-image: url(../img/ico/line_rsq.png);
+    }
+    .labMainNav > .switchBox > ul.inland > li:nth-of-type(2) > ul > li:nth-of-type(7)>span.icon{
+        background-image: url(../img/ico/line_qt.png);
+    }
     .labMainNav > .switchBox > ul > li > header:hover > span {
         font-weight: bold;
     }
