--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="../static/css/lab.css">
-
+  <link rel="stylesheet" href="../static/css/labLine.css">
 <div class="lab" style="display: none;">
     <!--頂部標題-->
     <div class="lab_head">
@@ -42,16 +42,11 @@
                         <div class="labMain_cbl_one">
                             <div class="labMain_cblt_tone labMain_cblt_tone_world">
                                 <!--<h3>基本介绍</h3>-->
-                                <p>
-                                    中海博睿为原海尔集团质量监测中心，建于1998年12月，累计投资近2.0亿，占地约10000㎡，专业实验室66间，涉及家电、机械和电子电器产品领域，覆盖运输、安全、性能、EMC、噪音、可靠性、用户体验、智能成套家电评测和零部件材料、环保模块等专业的500多项标准2000多个项目的检测能力； </p>
-                                <p>
-                                    中心拥有一支经验丰富的专业团队，在电子电器产品及关键模块领域具有主导和参与重要标准制定的能力，致力于打造集个性定制、智能检测、并联增值为一体的互联互通平台，满足用户个性化需求。 </p>
-                                <p>
-                                    通过长期与VDE、UL、JET、ETL、TUV莱茵、Intertek、BV、CSA、KTL、CQC、SII等多家国际权威认证检测机构的紧密合作，实现数据互认，逐渐发展为一个开放的检测资源共享平台，无需跨出国门，即可提供国际化的专业服务，从而以最快的速度、最优质的服务、最经济的成本，满足海尔全球产品的当地化需求，支撑产品用户体验引领。 </p>
+                             
                             </div>
                             <!--labMain_cblt_tone-->
                             <div class="labMain_cblt_ttwo labMain_cblt_ttwo_world"><img
-                                    src="${contextPath!}/static/img/labMain/labmain-1.png"/>
+                                    src=""/>
                             </div>
                             <!--labMain_cblt_ttwo-->
                         </div>
