点击一个实验室时，其他实验室下的台位隐藏。修其他相关bug

--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -203,9 +203,9 @@ li:not(.hasChildren).active {
         font-weight: bold;
     }
 
-    .labMainNav > .switchBox > ul > li > header.fold > span {
-        /*top: -.2em;*/
-    }
+/*    .labMainNav > .switchBox > ul > li > header.fold > span {
+        !*top: -.2em;*!
+    }*/
 
     .labMainNav > .switchBox > ul > li.noChildren:hover,
     .labMainNav > .switchBox > ul > li > ul > li:hover {
