--- a/src/main/webapp/static/css/labOprateState.css
+++ b/src/main/webapp/static/css/labOprateState.css
@@ -1,152 +1,172 @@
-.labMain_cb_left h3.lab_title{
-	font-size: 1.8em;
-	width: 18%;
-	top: 1%;
-	left: 8%;
-	text-align: center;
-}
-.leftContent{
-	display: flex;
-	width: 100%;
-	flex-direction: column;
-	padding: 2.4% 1% 2%;
-	height: 100%;
-}
-.pageBtn {
-	position: absolute;
-	right: 2.5%;
-	/*top: 4%;*/
-}
-.pageBtn .icon{
-	display: inline-block;
-	width:2em;
-	height: 2em;
-	cursor: pointer;
-	background-size: 100% 100%;
-}
-.pageBtn .icon:nth-of-type(1){
-	margin-right: 2em;
-	background-image: url("../img/labMain/labOprateState_prePage.png");
-}
-.pageBtn .icon:nth-of-type(1):hover,
-.pageBtn .icon:nth-of-type(1):active{
-	background-image: url("../img/labMain/labOprateState_prePage_active.png");
-}
-.pageBtn .icon:nth-of-type(2){
-	background-image: url("../img/labMain/labOprateState_nextPage.png");
-}
-.pageBtn .icon:nth-of-type(2):hover,
-.pageBtn .icon:nth-of-type(2):active{
-	background-image: url("../img/labMain/labOprateState_nextPage_active.png");
+.labMain_cb_left h3.lab_title {
+    font-size: 1.8em;
+    width: 18%;
+    top: 1%;
+    left: 8%;
+    text-align: center;
 }
 
-.leftContent>div{
-	flex:1;
-	display: flex;
-	padding: 0.6% 0;
+.leftContent {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    padding: 2.4% 1% 2%;
+    height: 100%;
 }
-.l-top>div,
-.l-mid>div,
-.l-bottom>div{
-	display: inline-block;
-	position: relative;
-	font-size: 1.1em;
+
+.pageBtn {
+    position: absolute;
+    right: 2.5%;
+    /*top: 4%;*/
 }
-[class$=-title]{
-	margin: 1% 1% 1% 0;
-	width:2.3em;
-	color: #fff;
-	font-size: 1.2em;
-	background-image: url("../img/labMain/labOprateState_title.png");
-	background-size: 100% 100%;
+
+.pageBtn .icon {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    cursor: pointer;
+    background-size: 100% 100%;
 }
-[class$=-title] h3{
-	position: absolute;
-	top: 22%;
-	text-align: center;
-	font-size: 1.4em;
+
+.pageBtn .icon:nth-of-type(1) {
+    margin-right: 2em;
+    background-image: url("../img/labMain/labOprateState_prePage.png");
 }
-[class$=-header]{
-	margin-right: 1.5%;
-	border: 1px solid #0cf;
+
+.pageBtn .icon:nth-of-type(1):hover,
+.pageBtn .icon:nth-of-type(1):active {
+    background-image: url("../img/labMain/labOprateState_prePage_active.png");
 }
-[class$=-body]{
-	border: 1px solid #0cf;
+
+.pageBtn .icon:nth-of-type(2) {
+    background-image: url("../img/labMain/labOprateState_nextPage.png");
+}
+
+.pageBtn .icon:nth-of-type(2):hover,
+.pageBtn .icon:nth-of-type(2):active {
+    background-image: url("../img/labMain/labOprateState_nextPage_active.png");
+}
+
+.leftContent > div {
+    flex: 1;
+    display: flex;
+    padding: 0.6% 0;
+}
+
+.l-top > div,
+.l-mid > div,
+.l-bottom > div {
+    display: inline-block;
+    position: relative;
+    font-size: 1.1em;
+}
+
+[class$=-title] {
+    margin: 1% 1% 1% 0;
+    width: 2.3em;
+    color: #fff;
+    font-size: 1.2em;
+    background-image: url("../img/labMain/labOprateState_title.png");
+    background-size: 100% 100%;
+}
+
+[class$=-title] h3 {
+    position: absolute;
+    top: 22%;
+    text-align: center;
+    font-size: 1.4em;
+}
+
+[class$=-header] {
+    margin-right: 1.2%;
+    border: 1px solid #0cf;
+}
+
+[class$=-body] {
+    border: 1px solid #0cf;
 }
 
 [class$=-header],
-[class$=-body]>div{
-	flex:10;
-	padding: 1% 1% 0;
+[class$=-body] > div {
+    flex: 7;
+    padding: 1% .8% 0;
 }
-[class$=-header]>div,
-[class$=-body]>div>div{
-	margin-bottom: 6%;
+
+[class$=-header] > div,
+[class$=-body] > div > div {
+    margin-bottom: 6%;
 }
 
 [class$=-header] [class^=item] h5,
-[class$=-body] [class^=item] h5{
-	width: 6em;
-	display: inline-block;
-	line-height: 0;
-	text-align: justify;
+[class$=-body] [class^=item] h5 {
+    width: 6em;
+    display: inline-block;
+    line-height: 0;
+    text-align: justify;
 }
-[class$=-header] [class^=item] h5{
-	width: 8em;
+
+[class$=-header] [class^=item] h5 {
+    width: 8em;
 }
+
 [class$=-header] [class^=item] h5 span,
-[class$=-body] [class^=item] h5 span{
-	display: inline-block;
-	padding-left: 100%;
+[class$=-body] [class^=item] h5 span {
+    display: inline-block;
+    padding-left: 100%;
 }
 
 [class^=item] .progress {
-	width: 19%;
-	height: .8em;
-	display: inline-block;
-	margin: 0 1%;
-	background-color: #224f64;
+    width: 19%;
+    height: .8em;
+    display: inline-block;
+    margin: 0 1%;
+    background-color: #224f64;
 }
-[class$=-body] .progress{
-	height: 0.6em;
+
+[class$=-body] .progress {
+    height: 0.6em;
 }
-.progress-bar{
-	background-color: #6cf;
+
+.progress-bar {
+    background-color: #6cf;
 }
+
 .l-top [class$=-body],
 .l-mid [class$=-body],
 .l-bottom [class$=-body] {
-	flex: 30;
-	display: flex;
-}
-[class$=-body]>div{
-	flex:1;
-}
-[class$=-body]>div:nth-of-type(1),
-[class$=-body]>div:nth-of-type(2),
-[class$=-body]>div:nth-of-type(3),
-[class$=-body]>div:nth-of-type(4)
-{
-	flex:1;
-	border-right: 1px dotted rgba(102, 204, 255, 0.7);
-}
-[class$=-body] h4{
-	color: #fff;
-	font-size: 1.2em;
-	text-align: center;
-	margin-bottom: 6%;
-	margin-top: 3%;
-}
-span strong{
-	font-weight: normal;
-	font-size: 1.1em;
-	color: #f93;
+    flex: 30;
+    display: flex;
 }
 
+[class$=-body] > div {
+    flex: 1;
+}
 
-.l-top-header,.l-mid-header,.l-bottom-header{
-	border: 1px solid white;
-	color: white;
+[class$=-body] > div:nth-of-type(1),
+[class$=-body] > div:nth-of-type(2),
+[class$=-body] > div:nth-of-type(3),
+[class$=-body] > div:nth-of-type(4) {
+    flex: 1;
+    border-right: 1px dotted rgba(102, 204, 255, 0.7);
+}
+
+[class$=-body] h4 {
+    color: #fff;
+    font-size: 1.16em;
+    text-align: center;
+    margin-bottom: 6%;
+    margin-top: 3%;
+}
+
+span strong {
+    font-weight: normal;
+    font-size: 1.1em;
+    color: #f93;
+}
+
+.l-top-header, .l-mid-header, .l-bottom-header {
+    border: 1px solid white;
+    color: white;
 }
 
 
