--- a/src/main/webapp/static/css/labLine.css
+++ b/src/main/webapp/static/css/labLine.css
@@ -81,7 +81,7 @@
 /*background-size: 100% 100%;*/
 /*}*/
 .sheshi_tab_active {
-    color: #66ffcc;
+    color: #00e673;
     background: url("../img/labMain/border-green.png") no-repeat;
     background-size: 100% 100%;
 }
