--- a/src/main/webapp/static/phm/css/common.css
+++ b/src/main/webapp/static/phm/css/common.css
@@ -11,5 +11,35 @@ h1,h2,h3,h4,h5,h6{font-size:16px;font-weight:100;}
 html,body{
 	height:100%;
 	font-family: "Microsoft yahei", "微软雅黑", "Source Sans Pro", "Helvetica Neue", 'Helvetica', 'Arial', sans-serif;
-    color: #64ccff;
+    color: #64ccff!important;
+    overflow:auto;
+}
+/*定义滚动条宽高及背景，宽高分别对应横竖滚动条的尺寸*/
+body::-webkit-scrollbar{
+    width: 1%;
+    height: 2%;
+    background-color: #000511;
+}
+/*定义滚动条的轨道，内阴影及圆角*/
+body::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    border-radius: 10px;
+    background-color: #000511;
+}
+/*定义滑块，内阴影及圆角*/
+body::-webkit-scrollbar-thumb{
+    /*width: 10px;*/
+    height: 2%;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #66ccff;
+}
+
+/*=====*/
+#content {
+    height: 100%;
+    width:100%;
+    /*background-color: #04032d;*/
+    background: url("../images/page2/bg-2.jpg") no-repeat;
+    background-size: 100% 100%;
 }
