--- a/src/main/webapp/static/css/flatMapAutoTip.css
+++ b/src/main/webapp/static/css/flatMapAutoTip.css
@@ -41,10 +41,13 @@ body{
     padding-bottom: 0.5em;
 }
 .echart_tip > .echart_content>h4{
-    margin:0.5em 0;
+    margin:0.5em 0 0.1em;
 }
 .echart_tip > .echart_content>img{
     width:60%;
+}
+.echart_tip > .echart_content>a:hover{
+
 }
 .echart_tip.bottom >.echart_content {
     bottom: -3.4em;
