--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -30,7 +30,7 @@
                     <li class="status">运营状态</li>
                     <li class="analysis">数据分析</li>
                     <!--<li class="centerCurves">实时监测</li>-->
-                    <li class="curves active">实时监测.</li>
+                    <li class="curves active">实时监测</li>
                     <li class="moduleMakers" style="display: none">实时数据</li>
                 </ul>
             </nav>
@@ -235,67 +235,7 @@
                         </div>
                     </div>
                 </div>
-                <!--中海博瑞视频监控和曲线-->
-<!--
-                <div class="item monitoring webSocket">
-                    <div class="labMain_cb_left">
-                        <div class="shishi_left">
-                            <div class="sheshi_tab">视频监控</div>
-                            <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
-                            <div class="sheshi_tab_list">
-                                <ul id="lab_unit_selected_center">
 
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="shishi_right">
-                            <div class="item video" style="display: none">
-                                <div class="bigVideoBox">
-                                    <div id="bigVideoWS"></div>
-                                    <div class="videoWait">视频接入中</div>
-                                </div>
-                            </div>
-                            <div class="item shishi_right_show">
-                                <div class='sheshi_right_top'>
-                                    <ul>
-                                        <li>试验编号：<span id="center_sybh_id"></span></li>
-                                        <li>样品编号：<span id="center_ypbm_id"></span></li>
-                                        <li>产品型号：<span id="center_cpxh_id"></span></li>
-                                        <li>试验项目：<span id="center_testPro_id"></span></li>
-                                    </ul>
-                                </div>
-                                <div class="sheshi_right_left">
-                                    <div id="main1"></div>
-                                    <div id="main2"></div>
-                                    <div class="message_box">
-                                        <div>该台位未开测</div>
-                                    </div>
-                                </div>
-
-                                <div class="sheshi_right_right">
-                                    <ul id="legend_ul">
-                                    </ul>
-                                </div>
-                                <div class="smallVideoBox">
-                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
-                                    <div id="smallVideoWS"></div>
-                                    <div class="videoWait">视频接入中</div>
-                                </div>
-                            </div>
-                            &lt;!&ndash;链接型实验室&ndash;&gt;
-                            <div class="item iframe" style="display: none">
-                                <div class="smallVideoBox">
-                                    <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
-                                    <div id="smallVideoWSWeb"></div>
-                                    <div class="videoWait">视频接入中</div>
-                                </div>
-                                <iframe id="lab_iframe_video" src=""></iframe>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
--->
                 <!--合并后的视频监控和曲线-->
                 <div class="item monitoring world">
                     <div class="labMain_cb_left">
