通过数据中心获取视频列表，放入视频监控按钮下面

--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -244,9 +244,12 @@
                 <div class="item monitoring world">
                     <div class="labMain_cb_left">
                         <div class="shishi_left">
-                            <div class="sheshi_tab ">视频监控</div>
+                            <div class="sheshi_tab centerVideo">视频监控</div>
+                            <div class="centerVideoList" style="display: none">
+                                <ul></ul>
+                            </div>
                             <div class="sheshi_tab sheshi_tab_active sheshi_tab_lines">实时数据</div>
-                            <div class="sheshi_tab_list">
+                             <div class="sheshi_tab_list" >
                                 <ul id="lab_unit_selected_center_world">
                                 </ul>
                             </div>
@@ -268,10 +271,9 @@
                                     </ul>
                                 </div>
                                 <div class="sheshi_right_left">
+                                    <div class="loadingAnimation">数据接入中</div>
                                     <div id="main1_world"></div>
-                                    <div class="loadingAnimation">数据接入中</div>
                                     <div id="main2_world"></div>
-                                    <div class="loadingAnimation">数据接入中</div>
                                     <div class="message_box">
                                         <div>该台位未开测</div>
                                     </div>
