--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -257,7 +257,10 @@
                         <div class="shishi_right shishi_right_show">
                             <div class="item video" hidden>
                                 <div class="bigVideoBox">
-                                    <div id="bigVideo"></div>
+                                    <!--<div id="bigVideo" style="display: none"></div>-->
+                                    <div id="bigVideo">
+                                        <iframe src="http://192.168.1.168:10800/play.html?channel=2"></iframe>
+                                    </div>
                                     <div class="loadingAnimation">视频接入中</div>
                                 </div>
                             </div>
@@ -285,7 +288,10 @@
                                 </div>
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
-                                    <div id="smallVideo"></div>
+                                    <!--<div id="smallVideo"></div>-->
+                                    <div id="smallVideo">
+                                        <iframe src="http://192.168.1.168:10800/play.html?channel=2"></iframe>
+                                    </div>
                                     <div class="loadingAnimation">视频接入中</div>
                                 </div>
                                 
