--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -302,7 +302,9 @@ li:not(.hasChildren).active {
     height: 45em;
     overflow: auto;
 }
-
+.monitoring .bigVideoBox > #bigVideo > iframe{
+    height: 42em;
+}
 .monitoring .bigVideoBox > div > div {
     display: inline-block;
     outline: 1px dotted darkgray;
