--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -300,7 +300,9 @@
                             <div class="item iframe" style="display: none">
                                 <div class="smallVideoBox">
                                     <div class="hideShow"><span class="text">点击隐藏</span><span class="icon"></span></div>
-                                    <div id="smallVideoWeb"></div>
+                                    <div id="smallVideoWeb">
+                                        <iframe src="http://192.168.1.168:10800/play.html?channel=2"></iframe>
+                                    </div>
                                     <div class="loadingAnimation">视频接入中</div>
                                 </div>
                                 <iframe id="lab_iframe_video" src=""></iframe>
