小视频自适应

--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -305,6 +305,10 @@ li:not(.hasChildren).active {
 .monitoring .bigVideoBox > #bigVideo > iframe{
     height: 42em;
 }
+#smallVideoWeb > iframe,
+#smallVideo > iframe{
+    height: 11em;
+}
 .monitoring .bigVideoBox > div > div {
     display: inline-block;
     outline: 1px dotted darkgray;
