动画加载事件

--- a/src/main/webapp/static/css/lab.css
+++ b/src/main/webapp/static/css/lab.css
@@ -348,6 +348,7 @@ li:not(.hasChildren).active {
     text-align: right;
     padding: .2em 0;
     cursor: pointer;
+    background: rgba(0,0,0,.7);
     box-shadow: 0 0 2em 1em rgba(0,0,0,.6);
 }
 .monitoring .shishi_right .smallVideoBox>object{
@@ -374,7 +375,7 @@ li:not(.hasChildren).active {
 }
 .monitoring .smallVideoBox>.loadingAnimation{
     left: 10em;
-    top: 8em;
+    top: 6em;
     font-size: 1em;
 }
 
