--- a/src/main/webapp/static/phm/css/service.css
+++ b/src/main/webapp/static/phm/css/service.css
@@ -1,11 +1,8 @@
 
-
 #content {
-    height: 100%;
-    width:100%;
-    /*background-color: #04032d;*/
-    background: url("../images/page2/bg-2.jpg") no-repeat;
-    background-size: 100% 100%;
+	background:url("../images/page2/bg-2.jpg") no-repeat 100% 100%;
+	background-size: 100% 100%;
+	width:100%;
 }
 /*=============================head==============================*/
 #head{
@@ -19,7 +16,7 @@
 	float:left;
 	height:34%;
 	width:4%;
-	margin-left:34.5%;
+	margin-left:33.5%;
 	margin-top:1.2%;
 }
 #head h1 a {
@@ -36,12 +33,12 @@
 
 #head h2{
 	float:left;
-	width:29%;
+	width:35%;
 	font-weight: 900;
 	font-size: 2.2em;
 	margin-top:1.1%;
 	margin-left:1%;
-	letter-spacing: 0.4em;
+	letter-spacing: 0.3em;
 }
 /*=============================bottom==============================*/
 #bottom{
